# music-life

./: .flutter-plugins-dependencies  .gitignore  CMakeLists.txt  README.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: cpp-tests.yml  deploy-pages.yml  flutter-ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test_pitch_detection
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/music_life/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
docs/: index.html
docs/privacy-policy/: index.html
integration_test/: app_flow_test.dart  native_to_ui_flow_test.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
issues/: Composition_Helpers.md
lib/: app_constants.dart  main.dart  main_dev.dart  main_prod.dart  main_staging.dart  metronome_sound_library.dart  native_pitch_bridge.dart  native_pitch_ffi.dart  native_pitch_isolate.dart  native_pitch_manager.dart  native_pitch_models.dart  rhythm_screen.dart  service_locator.dart
lib/config/: app_config.dart
lib/data/: app_database.dart  legacy_data_migrator.dart  waveform_codec.dart
lib/l10n/: app_en.arb  app_ja.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart
lib/models/: premium_video_export.dart
lib/pigeon/: native_pitch_messages.dart
lib/providers/: app_settings_controllers.dart  app_settings_provider.dart  chord_analyser_provider.dart  composition_provider.dart  dependency_providers.dart  haptic_service_provider.dart  library_provider.dart  metronome_settings_provider.dart  metronome_sound_library_controller.dart  practice_log_provider.dart  recording_playback_provider.dart  rhythm_provider.dart  tuner_provider.dart
lib/repositories/: backup_repository.dart  chord_history_repository.dart  cloud_sync_repository.dart  composition_repository.dart  metronome_settings_repository.dart  recording_repository.dart  settings_repository.dart
lib/router/: app_router.dart  routes.dart  routes.g.dart
lib/screens/: ai_practice_insights_screen.dart  chord_analyser_screen.dart  composition_helper_screen.dart  library_screen.dart  main_screen.dart  practice_log_screen.dart  tuner_screen.dart  video_practice_screen.dart
lib/services/: ad_service.dart  ai_practice_insights_service.dart  haptic_service.dart  permission_service.dart  premium_video_export_service.dart  recording_storage_service.dart  review_service.dart  service_error_handler.dart
lib/theme/: app_theme_seed.dart  dynamic_theme_mode.dart
lib/utils/: app_logger.dart  chord_utils.dart  metronome_utils.dart  practice_log_export.dart  practice_log_utils.dart  ring_buffer.dart  share_card_image.dart  tuner_transposition.dart  waveform_analyzer.dart
lib/widgets/: banner_ad_widget.dart  listening_indicator.dart  mic_permission_denied_view.dart  mic_permission_gate.dart
lib/widgets/rhythm/: groove_analysis_section.dart  metronome_bpm_controls.dart  metronome_controls.dart  metronome_preset_controls.dart  metronome_section.dart  sound_library_sheet.dart
lib/widgets/shared/: async_value_state_view.dart  banner_ad_widget.dart  chord_card.dart  loading_state_widget.dart  status_message_view.dart  waveform_view.dart
pigeons/: native_pitch_messages.dart
src/android/: PitchDetectorJni.cpp
src/android/com/musiclife/: PitchDetector.kt
src/app_bridge/: pitch_detector_ffi.cpp  pitch_detector_ffi.h
src/ios/: MLAudioEngine.h  MLAudioEngine.mm  MLPitchDetector.h  MLPitchDetector.mm
src/pitch_detection/: pitch_detector.cpp  pitch_detector.h  yin.cpp  yin.h
test/: app_constants_test.dart  main_test.dart  metronome_sound_library_test.dart  native_pitch_bridge_test.dart  native_pitch_isolate_manager_test.dart  widget_test.dart
test/config/: app_config_test.dart
test/data/: app_database_test.dart  legacy_data_migrator_test.dart
test/pigeon/: native_pitch_messages_test.dart
test/providers/: app_settings_provider_test.dart  dependency_providers_test.dart  library_provider_test.dart  metronome_settings_provider_test.dart  metronome_sound_library_controller_test.dart  practice_log_provider_test.dart  rhythm_provider_test.dart  tuner_provider_test.dart
test/repositories/: backup_repository_test.dart  chord_history_repository_test.dart  cloud_sync_repository_test.dart  composition_repository_test.dart  metronome_settings_repository_test.dart  recording_repository_test.dart  settings_repository_test.dart
test/router/: app_router_test.dart  routes_test.dart
test/screens/: ai_practice_insights_screen_test.dart  chord_analyser_screen_test.dart  composition_helper_screen_test.dart  golden_test_utils.dart  library_screen_recording_test.dart  library_screen_waveform_test.dart  main_screen_onboarding_test.dart  practice_log_screen_test.dart  rhythm_screen_test.dart  tuner_screen_test.dart  video_practice_screen_test.dart
test/services/: ad_service_test.dart  ai_practice_insights_service_test.dart  haptic_service_test.dart  permission_service_test.dart  premium_video_export_service_test.dart  recording_storage_service_test.dart  review_service_test.dart  service_error_handler_test.dart
test/theme/: app_theme_seed_test.dart
test/utils/: app_logger_test.dart  chord_utils_test.dart  metronome_utils_test.dart  practice_log_export_test.dart  ring_buffer_test.dart  share_card_image_test.dart  tuner_transposition_test.dart
test/widgets/: mic_permission_denied_view_test.dart  mic_permission_gate_test.dart
test/widgets/shared/: async_value_state_view_test.dart  shared_widgets_test.dart
tests/: test_pitch_detector.cpp
